<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="minus_button_description">Minus Button</string>
    <string name="initial_count">0</string>
    <string name="plus_button_description">Plus Button</string>
    <string name="team_1">Team1</string>
    <string name="team_2">Team2</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
</resources>
